[package]
name = "sqlink-loader"
version = "0.1.0"
edition = "2021"
description = """
Scenario 1 sub-option: SQLite loadable extension (.so / .dylib) that
vanilla sqlite3 can `SELECT load_extension('./sqlink-loader.so')` to
gain access to the sqlink wasm extension catalog. Sister to
`sqlink-native` (a standalone binary that opens its own connection);
this one registers trampolines on the host process's existing
sqlite3* handle and brings wasmtime + the sqlink-host runtime along
inside the .so.

Implementation: option B from sqlink-loader/DESIGN.md. The .so does
NOT use libsqlite3-sys's `loadable_extension` feature (which would
clash with `bundled` everywhere else in the workspace). Instead we
hand-roll the `sqlite3_api_routines` indirection — the pApi argument
passed to the init function is captured into a `#[repr(C)]` table,
and every sqlite3_* call from this crate goes through it. That way
the .so reaches the host process's SQLite (not its own bundled
copy) without unifying any libsqlite3-sys feature flag.

SPI back-channel (extensions calling spi.execute) routes through a
separate bundled-sqlite3 connection that this .so opens internally,
brought in via sqlink-host's existing `with_shared_spi_conn_open`
path. That connection is distinct from the user's; consistent state
across SPI is only available when both sides target the same file
db. See DESIGN.md for the full rationale.
"""
license = "MIT"

[lib]
name = "sqlink_loader"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
# The host carries the wasmtime engine + the dispatch surface. We
# call its public async dispatch methods (`dispatch_scalar`,
# `dispatch_aggregate_*`, ...) from our pApi-backed C trampolines.
sqlink-host = { path = "../host" }
# Capability / Policy types  the env-var path needs to compose a
# Policy for each extension we load.
sqlite-extension-policy = { path = "../sqlite-loader-wit" }

anyhow = "1"
once_cell = "1"
# Multi-thread runtime for driving the host's async dispatch APIs
# from sync C trampoline callbacks. block_on directly on a held
# runtime, not block_in_place + Handle::current  the caller's
# thread is owned by the host process's sqlite3, not by tokio.
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
