[package]
name = "sqlite-embed"
version = "0.1.0"
edition = "2021"
publish = false
description = """
Centralized FFI glue for embedded sqlink extensions.
Each extension's src/embed.rs becomes a thin call_scalar() body
plus a static ScalarSpec table; this crate provides the
sqlite3_create_function_v2 thunks + arg/result conversions so
every embedded extension shares the same hot path.
See PLAN-embed-extensions.md.
"""

[lib]
crate-type = ["rlib"]

[dependencies]
# Same version every other crate uses. default-features = false so
# we don't pull in pkg-config/vcpkg or duplicate the bundled compile
# (the cli's `core` already brings that in).
libsqlite3-sys = { version = "0.38", default-features = false }
