[package]
name = "sqlite-lib"
version = "0.1.0"
edition = "2021"
publish = false
description = "Programmatic SQLite-in-WASM library. Targets the sqlite-library world: SPI + high-level + low-level + library utility surfaces."

[lib]
crate-type = ["cdylib"]

[dependencies]
# Sync wit-bindgen — no async needed; the library world's imports
# are extension-loader + dispatch, both straight host calls.
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }
wit-bindgen = { version = "0.44", features = ["macros"] }
# Shared SQLite wrapper.
sqlite-wasm-core = { path = "../core" }
# Direct libsqlite3-sys reference for sqlite3_complete + SQLITE_*
# action codes used by the in-WASM authorizer dispatch.
libsqlite3-sys = { version = "0.30" }

# Component packaging mirrors the cli crate:
#   cargo build --release --target wasm32-wasip2
#   wasm-tools component new \
#     target/wasm32-wasip2/release/sqlite_lib.wasm \
#     -o target/wasm32-wasip2/release/sqlite_lib.component.wasm
