[package]
name = "sqlite-pcache-tvm"
version = "0.1.0"
edition = "2021"
description = """
Custom `sqlite3_pcache_methods2` implementation that will route
SQLite's page cache through a TVM (tvm-wasm) page-store region,
unlocking working sets larger than wasm32's 4 GiB ceiling. See
PLAN-tvm-integration.md.

First-commit scope: the registration plumbing + a HashMap-backed
cache that exercises the eleven `sqlite3_pcache_methods2`
trampolines. The TVM `page-store` region backend swaps in for the
HashMap in the follow-up commit; the SQLite-facing surface is
already correct from this commit, so backend swap is contained.
"""
license = "MIT"

[features]
default = []
# Swap the Path D cold-tier from the default in-process
# `HashMap<u32, Vec<u8>>` to a `tvm:memory`-backed region. Wasm32-
# only (the wit-bindgen guest code only compiles for wasm32). See
# PLAN-tvm-integration Phase 1.1 for the design and
# `probe/tvm-substrate/` for the host-side wiring story.
#
# Not yet wired in this commit  the trait-shaped boundary lives
# in `region.rs` so plugging in a `WitTvmRegion` is a follow-up.
tvm = []

[dependencies]
# Same libsqlite3-sys version core/cli use. NOT bundled  the
# bundled compile lives in core, and cargo's `links =`
# uniqueness rule forbids two crates from declaring it. This crate
# just needs the type/binding surface, not the C compile.
libsqlite3-sys = { version = "0.30", default-features = false }
# core is what brings in the bundled sqlite3 build; transitively
# linking it satisfies our extern symbols.
sqlite-wasm-core = { path = "../core" }
