[package]
name = "sqlite-pcache-tvm"
version = "0.1.0"
edition = "2021"
description = """
Custom `sqlite3_pcache_methods2` implementation that will route
SQLite's page cache through a TVM (tvm-wasm) page-store region,
unlocking working sets larger than wasm32's 4 GiB ceiling. See
PLAN-tvm-integration.md.

First-commit scope: the registration plumbing + a HashMap-backed
cache that exercises the eleven `sqlite3_pcache_methods2`
trampolines. The TVM `page-store` region backend swaps in for the
HashMap in the follow-up commit; the SQLite-facing surface is
already correct from this commit, so backend swap is contained.
"""
license = "MIT"

[features]
default = []
# Swap the Path D cold-tier from the default in-process
# `HashMap<u32, Vec<u8>>` to a `tvm:memory`-backed region. The
# active guest-side wiring is gated on target_arch=wasm32 too
# the wit-bindgen extern imports only make sense in a wasm
# binary; on host targets `--features tvm` is a no-op so
# native tests of the rest of the crate keep working.
tvm = ["dep:wit-bindgen", "dep:wit-bindgen-rt"]

[dependencies]
# Same libsqlite3-sys version core/cli use. NOT bundled  the
# bundled compile lives in core, and cargo's `links =`
# uniqueness rule forbids two crates from declaring it. This crate
# just needs the type/binding surface, not the C compile.
libsqlite3-sys = { version = "0.30", default-features = false }
# core is what brings in the bundled sqlite3 build; transitively
# linking it satisfies our extern symbols.
sqlite-wasm-core = { path = "../core" }
# Generates the guest-side tvm:memory imports. Same version the
# other examples + probe pin so the bindgen surfaces match.
wit-bindgen = { version = "0.44", features = ["macros"], optional = true }
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"], optional = true }
