[package]
name = "sqlite-vfs-tvm"
version = "0.1.0"
edition = "2021"
description = """
Custom `sqlite3_vfs` implementation. Phase 4 of the TVM track in
PLAN-tvm-integration.md.

First-commit scope (Phase 4.0): the sqlite3_vfs +
sqlite3_io_methods trampolines and an `install()` that registers
via `sqlite3_vfs_register`. Backend is an in-process Vec<u8>
per "file"  the TVM-backed variant (sibling to
sqlite-pcache-tvm's WitTvmRegion) is Phase 4.1.

The intent: when registered as the default VFS, `Connection::open
("/anywhere/anything.db", ...)` routes every byte through this
crate. SQLite treats each path as a file; we hold the bytes in
memory (Phase 4.0) or in a TVM region (Phase 4.1). With
`PRAGMA temp_store = FILE`, sort/hash spill flows through too.
That's the > 4 GiB story for non-page bytes.
"""
license = "MIT"

[features]
default = []
# Swap the per-file backend from the default in-process `Vec<u8>`
# to a `tvm:memory`-backed chunked-allocation storage. The
# guest-side wit-bindgen extern blocks only make sense on
# wasm32; on host targets `--features tvm` is a no-op so native
# unit tests of the rest of the crate keep working. Same shape
# as sqlite-pcache-tvm's `tvm` feature gate.
tvm = ["dep:wit-bindgen", "dep:wit-bindgen-rt"]

[dependencies]
# Same libsqlite3-sys version core/cli use. NOT bundled  the
# bundled compile lives in core; cargo's `links =` uniqueness
# rule forbids two crates from declaring it.
libsqlite3-sys = { version = "0.30", default-features = false }
# core brings in the bundled sqlite3 build; transitively linking
# it satisfies our extern symbols.
sqlite-wasm-core = { path = "../core" }
# Used for the shared file table + per-file storage  the table
# is a Mutex<HashMap<String, Arc<Mutex<dyn FileStorage>>>>, and
# parking_lot's Mutex is what core/host already pull in.
parking_lot = "0.12"
once_cell = "1"
# Generates the guest-side tvm:memory imports. Same version
# sqlite-pcache-tvm pins so the bindgen surfaces match.
wit-bindgen = { version = "0.44", features = ["macros"], optional = true }
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"], optional = true }
