[package]
name = "baseN-extension"
version = "0.1.0"
edition = "2021"
description = """
Compact base-N codecs not covered by SQLite's built-in
`hex()` / json1's base64 helpers:

    base32_encode(blob)        TEXT   RFC 4648 standard, no pad
    base32_decode(text)        BLOB
    base58_encode(blob)        TEXT   Bitcoin alphabet
    base58_decode(text)        BLOB

Useful for Bitcoin / Solana / IPFS CID storage (base58)
and TOTP secret sharing (base32). Encode is determin-
istic; decode errors return NULL rather than raising so
SQL composition (e.g. `COALESCE(base58_decode(x),
default_blob)`) stays clean.

base62 was considered but dropped from v1: the
upstream crate treats base62 as an integer encoding
(u128 in, string out) rather than a bytes-bytes codec,
which doesn't fit the BLOB-in / TEXT-out shape the
other two have. Revisit if a caller asks for it
(easiest path: accept an INTEGER + return TEXT).
"""
license = "MIT"
publish = false

# NOTE: [workspace] removed so the cli's embed-baseN path dep can
# reach this crate from the parent workspace; same pattern as
# sha3-extension. `make ext NAME=baseN` still builds the wasi
# component fine. See PLAN-embed-extensions.md.

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Enables src/embed.rs + the libsqlite3-sys + sqlite-embed deps so
# the cli can compile baseN's scalars in directly via
# sqlite3_create_function_v2. WIT component build is unaffected;
# default-off.
embed = ["dep:libsqlite3-sys", "dep:sqlite-embed"]

[dependencies]
wit-bindgen = { version = "0.44", features = ["macros"] }
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }
base32 = { version = "0.5", default-features = false }
bs58 = { version = "0.5", default-features = false, features = ["alloc"] }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
libsqlite3-sys = { version = "0.38", optional = true, default-features = false }
sqlite-embed = { path = "../../sqlite-embed", optional = true }
