[package]
name = "bic-extension"
version = "0.1.0"
edition = "2021"
description = """
BIC / SWIFT code (ISO 9362) structural validation + decomposition
"""
license = "MIT"
publish = false

# NOTE: [workspace] removed so the cli's embed-bic path dep can
# reach this crate from the parent workspace; same pattern as
# sha3-extension. `make ext NAME=bic` still builds the wasi
# component fine. See PLAN-embed-extensions.md.

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Enables src/embed.rs + the libsqlite3-sys + sqlite-embed deps so
# the cli can compile bic's scalars in directly via
# sqlite3_create_function_v2. WIT component build is unaffected;
# default-off.
embed = ["dep:libsqlite3-sys", "dep:sqlite-embed"]

[dependencies]
wit-bindgen = { version = "0.44", features = ["macros"] }
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }
libsqlite3-sys = { version = "0.38", optional = true, default-features = false }
sqlite-embed = { path = "../../sqlite-wasm/sqlite-embed", optional = true }
